completed things I do section

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -2,5 +2,7 @@
  $main-font-color-dark: #3F3F3F;
  $main-hover-color: #f1faee;
  $main-bg-color: #1b262c;
+ $main-border-color: lighten($main-bg-color, 10%);
+ $main-accent-color: #21c6ce;
 
 
