--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -4,5 +4,7 @@
  $main-bg-color: #1b262c;
  $main-border-color: lighten($main-bg-color, 10%);
  $main-accent-color: #21c6ce;
+ $main-accent-color-lighter: lighten($main-accent-color, 5%);
+ $main-accent-color-darker: darken($main-accent-color, 10%);
 
 
