implemented and styled contact me form

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -7,4 +7,8 @@
  $main-accent-color-lighter: lighten($main-accent-color, 5%);
  $main-accent-color-darker: darken($main-accent-color, 10%);
 
+ // Input
+$input-border-color: #ededed;
+$input-border-color-focus: #bababa;
+
 
