--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,14 +1,25 @@
- $main-font-color: #f1faee;
- $main-font-color-dark: #3F3F3F;
- $main-hover-color: #f1faee;
- $main-bg-color: #1b262c;
- $main-border-color: lighten($main-bg-color, 10%);
- $main-accent-color: #21c6ce;
- $main-accent-color-lighter: lighten($main-accent-color, 5%);
- $main-accent-color-darker: darken($main-accent-color, 10%);
+$main-font-color: #f1faee;
+$main-font-color-dark: #3F3F3F;
+$main-hover-color: #f1faee;
+$main-bg-color: #1b262c;
+$main-border-color: lighten($main-bg-color, 10%);
+$main-accent-color: #21c6ce;
+$main-accent-color-lighter: lighten($main-accent-color, 5%);
+$main-accent-color-darker: darken($main-accent-color, 10%);
 
- // Input
+// Input
 $input-border-color: #ededed;
 $input-border-color-focus: #bababa;
 
+// media query breakpoints
+$mobile-sm: 360px;
+$mobile-md: 400px;
+$mobile-lg: 480px;
+$tablet-sm: 600px;
+$tablet-lg: 720px;
+$laptop-sm: 768px;
+$laptop-md: 800px;
+$laptop-lg: 960px;
+$desktop-sm: 1024px;
+$desktop-lg: 1280px;
 
